--- a/public/about.html
+++ b/public/about.html
@@ -11,7 +11,7 @@
     <nav style="display: flex; justify-content: space-between;">
     <h1>Darshan Makwana</h1>
     <ul class="menu">
-<li><a href="index.html">Home</a></li><li><a href="about.html">About</a></li><li><a href="post.html">Post</a></li>
+        <li><a href="./index.html">Home</a></li><li><a href="./about.html">About</a></li>
     </ul>
     
 </nav>
@@ -82,7 +82,7 @@
     <script src="//cdn.jsdelivr.net/combine/npm/katex/dist/katex.min.js,npm/katex/dist/contrib/auto-render.min.js,npm/@xiee/utils/js/render-katex.js" defer></script>
     <script src="//cdn.jsdelivr.net/npm/@xiee/utils/js/center-img.min.js" defer></script>
     <hr/>
-&copy; 2024 Darshan Makwana
+    &copy; 2024 Darshan Makwana
 </footer>
 </body>
 </html>
